[gd_scene load_steps=2 format=3 uid="uid://b7py4c84rndkt"]

[ext_resource type="Script" path="res://entities/enemies/spawning/EnemySpawnArea.gd" id="1_4xv6s"]

[node name="EnemySpawnArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4xv6s")

[node name="SpawnCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpawnCooldown" to="." method="_on_spawn_cooldown_timeout"]
